--- a/pydocmd.yml
+++ b/pydocmd.yml
@@ -15,15 +15,19 @@ generate:
     - xquant.layers.QuantLocallyConnected2D
 - activations.md:
   - xquant.activations+
+- constraints.md:
+  - xquant.constraints+
 - quantizers.md:
   - xquant.quantizers:
     - xquant.quantizers.ste_sign
     - xquant.quantizers.approx_sign
+
 pages:
 - Home: index.md << README.md
 - Quantized Layers: layers.md
 - Quantizers: quantizers.md
 - Activations: activations.md
+- Constraints: constraints.md
 - Examples:
   - MNIST: examples/mnist.ipynb << examples/mnist.ipynb
 - Library Development:
