--- a/pydocmd.yml
+++ b/pydocmd.yml
@@ -15,6 +15,8 @@ generate:
     - xquant.layers.QuantLocallyConnected2D
 - activations.md:
   - xquant.activations+
+- callbacks.md:
+  - xquant.callbacks+
 - constraints.md:
   - xquant.constraints+
 - quantizers.md:
@@ -28,6 +30,7 @@ pages:
 - Quantizers: quantizers.md
 - Activations: activations.md
 - Constraints: constraints.md
+- Callbacks: callbacks.md
 - Examples:
   - MNIST: examples/mnist.ipynb << examples/mnist.ipynb
 - Library Development:
