--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,8 +7,13 @@ jobs:
     matrix:
       Python36:
         python.version: '3.6'
+        tensorflow.version: '1.13.1'
       Python37:
         python.version: '3.7'
+        tensorflow.version: '1.13.1'
+      Python37TF2:
+        python.version: '3.7'
+        tensorflow.version: '2.0.0-alpha0'
 
   steps:
   - task: UsePythonVersion@0
@@ -16,7 +21,10 @@ jobs:
       versionSpec: '$(python.version)'
       architecture: 'x64'
 
-  - script: python -m pip install --upgrade pip && pip install -e .[test]
+  - script: |
+      python -m pip install --upgrade pip
+      pip install tensorflow==$(tensorflow.version)
+      pip install -e .[test]
     displayName: 'Install dependencies'
 
   - script: pytest .
