Publish test results to azure

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -27,5 +27,11 @@ jobs:
       pip install -e .[test]
     displayName: 'Install dependencies'
 
-  - script: pytest .
+  - script: pytest . --junitxml=junit/test-results.xml
     displayName: 'pytest'
+
+  - task: PublishTestResults@2
+    condition: succeededOrFailed()
+    inputs:
+      testResultsFiles: '**/test-*.xml'
+      testRunTitle: 'Publish test results for Python $(python.version) and TF $(tensorflow.version)'
