--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,12 +5,12 @@ jobs:
     vmImage: 'Ubuntu-16.04'
   strategy:
     matrix:
-      Python36:
-        python.version: '3.6'
-        tensorflow.version: '1.13.1'
-      Python37:
-        python.version: '3.7'
-        tensorflow.version: '1.13.1'
+      # Python36:
+      #   python.version: '3.6'
+      #   tensorflow.version: '1.13.1'
+      # Python37:
+      #   python.version: '3.7'
+      #   tensorflow.version: '1.13.1'
       Python37TF2:
         python.version: '3.7'
         tensorflow.version: '2.0.0-alpha0'
@@ -22,16 +22,21 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install --upgrade pip
       pip install tensorflow==$(tensorflow.version)
       pip install -e .[test]
     displayName: 'Install dependencies'
 
-  - script: pytest . --junitxml=junit/test-results.xml
-    displayName: 'pytest'
+  - script: pytest . --junitxml=junit/test-results.xml --cov=xquant --cov-report=xml --cov-report=html --cov-config=.coveragerc
+    displayName: 'pytest coverage'
 
   - task: PublishTestResults@2
     condition: succeededOrFailed()
     inputs:
       testResultsFiles: '**/test-*.xml'
       testRunTitle: 'Publish test results for Python $(python.version) and TF $(tensorflow.version)'
+
+  - task: PublishCodeCoverageResults@1
+    inputs:
+      codeCoverageTool: Cobertura
+      summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
+      reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
