--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,15 +5,16 @@ jobs:
     vmImage: 'Ubuntu-16.04'
   strategy:
     matrix:
-      # Python36:
-      #   python.version: '3.6'
-      #   tensorflow.version: '1.13.1'
-      # Python37:
-      #   python.version: '3.7'
-      #   tensorflow.version: '1.13.1'
+      Python36:
+        python.version: '3.6'
+        tensorflow.version: '1.13.1'
+      Python37:
+        python.version: '3.7'
+        tensorflow.version: '1.13.1'
       Python37TF2:
         python.version: '3.7'
         tensorflow.version: '2.0.0-alpha0'
+        coverage: 'true'
 
   steps:
   - task: UsePythonVersion@0
@@ -26,8 +27,13 @@ jobs:
       pip install -e .[test]
     displayName: 'Install dependencies'
 
+  - script: pytest . --junitxml=junit/test-results.xml
+    displayName: 'pytest'
+    condition: ne(variables['coverage'], 'true')
+
   - script: pytest . --junitxml=junit/test-results.xml --cov=xquant --cov-report=xml --cov-report=html --cov-config=.coveragerc
     displayName: 'pytest coverage'
+    condition: eq(variables['coverage'], 'true')
 
   - task: PublishTestResults@2
     condition: succeededOrFailed()
@@ -36,6 +42,7 @@ jobs:
       testRunTitle: 'Publish test results for Python $(python.version) and TF $(tensorflow.version)'
 
   - task: PublishCodeCoverageResults@1
+    condition: eq(variables['coverage'], 'true')
     inputs:
       codeCoverageTool: Cobertura
       summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
