Publish test results (#39)
* Publish test results to azure

* Publish code coverage

* Only publish coverage on one task

* Fix status badge

* Only build master and PRs

Since we currently only have 1 parallel build, let's constrain builds to PRs and master

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,3 +1,9 @@
+trigger:
+- master
+
+pr:
+- master
+
 jobs:
 
 - job: 'Test'
@@ -14,6 +20,7 @@ jobs:
       Python37TF2:
         python.version: '3.7'
         tensorflow.version: '2.0.0-alpha0'
+        coverage: 'true'
 
   steps:
   - task: UsePythonVersion@0
@@ -22,10 +29,27 @@ jobs:
       architecture: 'x64'
 
   - script: |
-      python -m pip install --upgrade pip
       pip install tensorflow==$(tensorflow.version)
       pip install -e .[test]
     displayName: 'Install dependencies'
 
-  - script: pytest .
+  - script: pytest . --junitxml=junit/test-results.xml
     displayName: 'pytest'
+    condition: ne(variables['coverage'], 'true')
+
+  - script: pytest . --junitxml=junit/test-results.xml --cov=xquant --cov-report=xml --cov-report=html --cov-config=.coveragerc
+    displayName: 'pytest coverage'
+    condition: eq(variables['coverage'], 'true')
+
+  - task: PublishTestResults@2
+    condition: succeededOrFailed()
+    inputs:
+      testResultsFiles: '**/test-*.xml'
+      testRunTitle: 'Publish test results for Python $(python.version) and TF $(tensorflow.version)'
+
+  - task: PublishCodeCoverageResults@1
+    condition: eq(variables['coverage'], 'true')
+    inputs:
+      codeCoverageTool: Cobertura
+      summaryFileLocation: '$(System.DefaultWorkingDirectory)/**/coverage.xml'
+      reportDirectory: '$(System.DefaultWorkingDirectory)/**/htmlcov'
