--- a/pydocmd.yml
+++ b/pydocmd.yml
@@ -25,17 +25,19 @@ generate:
           - xquant.quantizers.approx_sign
 
 pages:
-  - Home: index.md << README.md
-  - Quantized Layers: layers.md
-  - Quantizers: quantizers.md
-  - Activations: activations.md
-  - Constraints: constraints.md
-  - Callbacks: callbacks.md
+  - Home:
+      - Getting Started: index.md << README.md
+      - Library Development:
+          - Contributing Guide: dev/contributing.md << CONTRIBUTING.md
+          - Code of Conduct: dev/code_of_conduct.md << CODE_OF_CONDUCT.md
+  - Documenation:
+      - Quantized Layers: layers.md
+      - Quantizers: quantizers.md
+      - Activations: activations.md
+      - Constraints: constraints.md
+      - Callbacks: callbacks.md
   - Examples:
       - MNIST: examples/mnist.ipynb << examples/mnist.ipynb
-  - Library Development:
-      - Contributing Guide: dev/contributing.md << CONTRIBUTING.md
-      - Code of Conduct: dev/code_of_conduct.md << CODE_OF_CONDUCT.md
 
 headers: markdown
 repo_url: https://github.com/lgeiger/xquant
@@ -43,8 +45,11 @@ theme:
   name: material
   logo:
     icon: developer_board
+  palette:
+    primary: blue
+    accent: blue
   feature:
-    tabs: false
+    tabs: true
 
 extra:
   social:
