Require Python 3.6 for larq to be installed
I think after this we should publish a tiny patch release 0.1.1 and remove 0.1.0 so people will get a proper error message if they try to install it on Python 3.5 or earlier.

--- a/pydocmd.yml
+++ b/pydocmd.yml
@@ -37,7 +37,7 @@ pages:
   - Examples:
       - Introduction to Larq: examples/mnist.ipynb << examples/mnist.ipynb
       - Binarynet on CIFAR10: examples/binarynet_cifar10.ipynb << examples/binarynet_cifar10.ipynb
-  - Documenation:
+  - Documentation:
       - Quantized Layers: layers.md
       - Quantizers: quantizers.md
       - Activations: activations.md
@@ -48,6 +48,7 @@ pages:
 
 headers: markdown
 repo_url: https://github.com/plumerai/larq
+repo_name: plumerai/larq
 edit_uri: ""
 theme:
   name: material
