Add magnitude-aware sign to docs

--- a/apidocs.yml
+++ b/apidocs.yml
@@ -24,3 +24,4 @@
     - larq.quantizers:
         - larq.quantizers.ste_sign
         - larq.quantizers.approx_sign
+        - larq.quantizers.magnitude_aware_sign
