Add User Guide to docs (#80)
* Add example model to front page

* Binarynet -> BinaryNet

* Rename top level navigation

* Add magnitude-aware sign to docs

* Add initial user guide

* Add docs on how to define a custom quantizer

Fixes #69

* Add link to STE

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -4,14 +4,15 @@ site_description: "An Open Source Machine Learning Framework for Training Extrem
 nav:
   - Home:
       - Getting Started: index.md
-      - Library Development:
+      - User Guide: guide.md
+      - Developer Guide:
           - Contributing Guide: contributing.md
           - Code of Conduct: code_of_conduct.md
   - Examples:
       - Introduction to BNNs with Larq: examples/mnist.ipynb
-      - Binarynet on CIFAR10: examples/binarynet_cifar10.ipynb
-      - Binarynet on CIFAR10 (Advanced): examples/binarynet_advanced_cifar10.ipynb
-  - Documentation:
+      - BinaryNet on CIFAR10: examples/binarynet_cifar10.ipynb
+      - BinaryNet on CIFAR10 (Advanced): examples/binarynet_advanced_cifar10.ipynb
+  - API:
       - Layers: api/layers.md
       - Quantizers: api/quantizers.md
       - Activations: api/activations.md
