Draft 1 of documentation and graph

--- a/apidocs.yml
+++ b/apidocs.yml
@@ -25,3 +25,4 @@
         - larq.quantizers.ste_sign
         - larq.quantizers.approx_sign
         - larq.quantizers.magnitude_aware_sign
+        - larq.quantizers.SteTern
