--- a/apidocs.yml
+++ b/apidocs.yml
@@ -17,7 +17,9 @@
 - constraints.md:
     - larq.constraints+
 - optimizers.md:
-    - larq.optimizers+
+    - larq.optimizers:
+        - larq.optimizers_v2.Bop
+        - larq.optimizers_v1.XavierLearningRateScaling
 - models.md:
     - larq.models+
 - quantizers.md:
