--- a/apidocs.yml
+++ b/apidocs.yml
@@ -20,6 +20,8 @@
     - larq.optimizers:
         - larq.optimizers_v2.Bop
         - larq.optimizers_v1.XavierLearningRateScaling
+- math.md:
+    - larq.math+
 - models.md:
     - larq.models+
 - quantizers.md:
