Docs: Add "Papers using Larq" page
This adds a page that allows users to advertise their papers and can act as a resource of papers about BNNs and other extremely quantized networks.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -19,6 +19,7 @@ nav:
       - Math: api/math.md
       - Models: api/models.md
   - Community:
+      - Papers using Larq: papers.md
       - Contributing Guide: contributing.md
       - Code of Conduct: code_of_conduct.md
 
