Move to larq organisation (#140)
* Move to larq organisation

* Update azure badges

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -31,8 +31,8 @@ nav:
       - About: about.md
       - FAQ: faq.md
 
-repo_url: https://github.com/plumerai/larq
-repo_name: plumerai/larq
+repo_url: https://github.com/larq/larq
+repo_name: larq/larq
 edit_uri: ""
 theme:
   name: material
