update some hyperlinks

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -47,7 +47,7 @@ theme:
 extra:
   social:
     - type: "github"
-      link: "https://github.com/plumerai"
+      link: "https://github.com/larq"
     - type: "twitter"
       link: "https://twitter.com/PlumeraiHQ"
     - type: "linkedin"
