--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -59,8 +59,6 @@ jobs:
         displayName: "Install docs dependencies"
         condition: eq(variables['coverage'], 'true')
 
-      - script: |
-          python generate_api_docs.py
-          mkdocs build
+      - script: ./larqdocs.sh build
         displayName: "Build docs"
         condition: eq(variables['coverage'], 'true')
