--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,7 +16,8 @@ jobs:
         Python37_TF114:
           python.version: "3.7"
           tensorflow.version: "1.14.0"
-          coverage: "true"
+          pytest.args: "--cov=larq --cov-report=html --cov-config=.coveragerc"
+          docs: "true"
         Python37_TF2:
           python.version: "3.7"
           tensorflow.version: "2.0.0-beta1"
@@ -30,35 +31,18 @@ jobs:
       - script: |
           pip install tensorflow==$(tensorflow.version)
           pip install -e .[test]
+          pip install pytest-azurepipelines
         displayName: "Install dependencies"
 
-      - script: pytest . --junitxml=junit/test-results.xml
+      - script: pytest . $(pytest.args)
         displayName: "pytest"
-        condition: ne(variables['coverage'], 'true')
-
-      - script: pytest . --junitxml=junit/test-results.xml --cov=larq --cov-report=xml --cov-report=html --cov-config=.coveragerc
-        displayName: "pytest coverage"
-        condition: eq(variables['coverage'], 'true')
-
-      - task: PublishTestResults@2
-        condition: succeededOrFailed()
-        inputs:
-          testResultsFiles: "**/test-*.xml"
-          testRunTitle: "Publish test results for Python $(python.version) and $(tensorflow)"
-
-      - task: PublishCodeCoverageResults@1
-        condition: eq(variables['coverage'], 'true')
-        inputs:
-          codeCoverageTool: Cobertura
-          summaryFileLocation: "$(System.DefaultWorkingDirectory)/**/coverage.xml"
-          reportDirectory: "$(System.DefaultWorkingDirectory)/**/htmlcov"
 
       - script: |
           pip install nbconvert git+https://github.com/lgeiger/pydoc-markdown.git
           pip install -e .[docs]
         displayName: "Install docs dependencies"
-        condition: eq(variables['coverage'], 'true')
+        condition: eq(variables['docs'], 'true')
 
       - script: ./larqdocs.sh build
         displayName: "Build docs"
-        condition: eq(variables['coverage'], 'true')
+        condition: eq(variables['docs'], 'true')
