--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -40,6 +40,7 @@ repo_name: larq/larq
 edit_uri: ""
 theme:
   name: material
+  custom_dir: docs-theme
   logo:
     icon: developer_board
   palette:
