--- a/apidocs.yml
+++ b/apidocs.yml
@@ -14,6 +14,8 @@
     - larq.math+
 - models.md:
     - larq.models+
+- metrics.md:
+    - larq.metrics+
 - quantizers.md:
     - larq.quantizers:
         - larq.quantizers.ste_sign
