--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,6 +23,7 @@ nav:
       - Optimizers: api/optimizers.md
       - Math: api/math.md
       - Models: api/models.md
+      - Metrics: api/metrics.md
   - Models:
       - Larq Zoo: models/index.md
       - Examples: models/examples.md
