Cleanup quantizer classes
This adds `QuantizerFunctionWrapper` that can be used to wrap a simple quantizer function into a serializable class that will retain the config after reloading from a `.h5` model file.

This allows quantizers to be used either as either
```python
input_quantizer=lq.quantizers.ste_tern
```
or
```python
input_quantizer=lq.quantizers.SteTern(threshold_value=0.05)
```

--- a/apidocs.yml
+++ b/apidocs.yml
@@ -18,8 +18,4 @@
 - metrics.md:
     - larq.metrics+
 - quantizers.md:
-    - larq.quantizers:
-        - larq.quantizers.ste_sign
-        - larq.quantizers.approx_sign
-        - larq.quantizers.magnitude_aware_sign
-        - larq.quantizers.SteTern
+    - larq.quantizers+
