Move larq_zoo docs to main repo
Adding documentation for a new larq zoo model can be a bit cumbersome because its API docs have to be manually added and there is no good way to preview the changes to the website.
This moves the larq_zoo docs into the main repo to allow for easier developement. Also API docs are now automatically generated using the same process as larq it self.
While this might

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -27,7 +27,7 @@ nav:
   - Models:
       - Larq Zoo: models/index.md
       - Examples: models/examples.md
-      - API: models/api.md
+      - API: api/larq_zoo.md
   - Community:
       - Papers using Larq: papers.md
       - Contributing Guide: contributing.md
