Move larq_zoo docs to main repo (#199)
* Move larq_zoo docs to main repo

Adding documentation for a new larq zoo model can be a bit cumbersome because its API docs have to be manually added and there is no good way to preview the changes to the website.
This moves the larq_zoo docs into the main repo to allow for easier developement. Also API docs are now automatically generated using the same process as larq it self.

* Remove un-published models from docs

--- a/apidocs.yml
+++ b/apidocs.yml
@@ -19,3 +19,10 @@
     - larq.metrics+
 - quantizers.md:
     - larq.quantizers+
+- larq_zoo.md:
+    - larq_zoo:
+        - larq_zoo.BinaryAlexNet
+        - larq_zoo.BiRealNet
+        - larq_zoo.XNORNet
+        - larq_zoo.decode_predictions
+        - larq_zoo.preprocess_input
