Add docs formatter to automatically add netron links
This will automatically add a link to the network architecture rendered by netron.
E.g.: [Interactive architecture diagram](https://lutzroeder.github.io/netron/?url=https://cors-anywhere.herokuapp.com/https://github.com/larq/zoo/releases/download/resnet_e-v0.1.0/resnet_e_18.json)

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,6 +70,9 @@ markdown_extensions:
         - name: plot-altair
           class: larq-altair
           format: !!python/name:plot_altair.html_format
+        - name: netron
+          class: larq-netron
+          format: !!python/name:netron_link.html_format
   - pymdownx.arithmatex
   - toc:
       permalink: true
