Unify color scheme and fix some minor styling issues
This PR properly configures the color theme and fixes some minor rendering issues on mobile devices.

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -45,8 +45,8 @@ theme:
   logo: images/logo-big-font.svg
   favicon: images/favicon-32.png
   palette:
-    primary: grey
-    accent: green
+    primary: larq
+    accent: larq
   feature:
     tabs: true
 
