Fix Tensor comparison to support TF2-rc0 hasing behaviour
Recently TensorFlow changed the behaviour of equality in 2.0 such that Variables & Tensors are no longer hashable. This breaks our current strategy of Tensor comparison, since TF 2 now tries to compare elementwise. This PR fixes the comparison to account for the new behaviour.
For more info see https://github.com/tensorflow/tensorflow/issues/32210

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -19,7 +19,7 @@ jobs:
           pytest.args: "--cov=larq --cov-report=html --cov-config=.coveragerc"
         Python37_TF2:
           python.version: "3.7"
-          tensorflow.version: "2.0.0-beta1"
+          tensorflow.version: "2.0.0-rc0"
 
     steps:
       - task: UsePythonVersion@0
@@ -33,7 +33,7 @@ jobs:
           pip install pytest-azurepipelines
         displayName: "Install dependencies"
 
-      - script: pytest . $(pytest.args)
+      - script: pytest . -vv $(pytest.args)
         displayName: "pytest"
 
   - job: "Lint"
