Switch Larq Zoo examples to a runnable notebook
This changes the Larq Zoo examples to a runnable notebook that also adds better descriptions instead of just adapting the Keras code snippets.

See https://github.com/openjournals/joss-reviews/issues/1746#issuecomment-532738850

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -26,7 +26,7 @@ nav:
       - Metrics: api/metrics.md
   - Models:
       - Larq Zoo: models/index.md
-      - Examples: models/examples.md
+      - Examples: models/examples.ipynb
       - API: api/larq_zoo.md
   - Community:
       - Papers using Larq: papers.md
