Cite BNN NeurIPS paper
This adds the citation of the original NeurIPS paper to our website and the JOSS paper

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -62,6 +62,7 @@ extra:
 markdown_extensions:
   - admonition
   - codehilite
+  - footnotes
   - pymdownx.superfences:
       custom_fences:
         - name: plot-activation
