Automatically draft release notes
This will automatically draft release notes from merged PRs using https://github.com/toolmantim/release-drafter

--- a/.github/pr_labels.yml
+++ b/.github/pr_labels.yml
@@ -4,7 +4,8 @@ labelRule:
   values:
     - "bug"
     - "documentation"
-    - "internal improvement"
-    - "performance"
+    - "internal-improvement"
     - "dependencies"
     - "feature"
+    - "breaking-change"
+    - "skip-changelog"
